[package]
name = "tweak-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = { version = "0.32.5", features = ["serde"] }
clap = { version = "4.5.28", features = ["derive"] }
hex = "0.4"
rusqlite = "0.33.0"
secp256k1 = {version = "0.28.1", features = ["rand-std"] }
silentpayments = "0.4.0"
sha2 = "0.10.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
tracing-appender = "0.2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }

[dev-dependencies]

